--- a/HeroesOfPymoli_HW.ipynb
+++ b/HeroesOfPymoli_HW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -94,27 +94,102 @@
        "      <td>Fury</td>\n",
        "      <td>1.44</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>775</td>\n",
+       "      <td>Aethedru70</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>776</td>\n",
+       "      <td>Iral74</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>164</td>\n",
+       "      <td>Exiled Doomblade</td>\n",
+       "      <td>1.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>777</td>\n",
+       "      <td>Yathecal72</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
+       "      <td>3.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>778</td>\n",
+       "      <td>Sisur91</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>779</td>\n",
+       "      <td>Ennrian78</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Dawn</td>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>780 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
-       "0            0        Lisim78   20   Male      108   \n",
-       "1            1    Lisovynya38   40   Male      143   \n",
-       "2            2     Ithergue48   24   Male       92   \n",
-       "3            3  Chamassasya86   24   Male      100   \n",
-       "4            4      Iskosia90   23   Male      131   \n",
+       "     Purchase ID             SN  Age  Gender  Item ID  \\\n",
+       "0              0        Lisim78   20    Male      108   \n",
+       "1              1    Lisovynya38   40    Male      143   \n",
+       "2              2     Ithergue48   24    Male       92   \n",
+       "3              3  Chamassasya86   24    Male      100   \n",
+       "4              4      Iskosia90   23    Male      131   \n",
+       "..           ...            ...  ...     ...      ...   \n",
+       "775          775     Aethedru70   21  Female       60   \n",
+       "776          776         Iral74   21    Male      164   \n",
+       "777          777     Yathecal72   20    Male       67   \n",
+       "778          778        Sisur91    7    Male       92   \n",
+       "779          779      Ennrian78   24    Male       50   \n",
        "\n",
-       "                                   Item Name  Price  \n",
-       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                          Frenzied Scimitar   1.56  \n",
-       "2                               Final Critic   4.88  \n",
-       "3                                Blindscythe   3.27  \n",
-       "4                                       Fury   1.44  "
+       "                                     Item Name  Price  \n",
+       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                            Frenzied Scimitar   1.56  \n",
+       "2                                 Final Critic   4.88  \n",
+       "3                                  Blindscythe   3.27  \n",
+       "4                                         Fury   1.44  \n",
+       "..                                         ...    ...  \n",
+       "775                                       Wolf   3.54  \n",
+       "776                           Exiled Doomblade   1.63  \n",
+       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
+       "778                               Final Critic   4.19  \n",
+       "779                                       Dawn   4.60  \n",
+       "\n",
+       "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +198,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"purchase_data.csv\")\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -1302,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1344,35 +1419,35 @@
        "      <th>0</th>\n",
        "      <th>Splinter</th>\n",
        "      <td>4</td>\n",
-       "      <td>((0, Splinter), [1.28, 1.28, 1.28, 1.28])</td>\n",
+       "      <td>1.2800</td>\n",
        "      <td>5.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <th>Crucifer</th>\n",
        "      <td>4</td>\n",
-       "      <td>((1, Crucifer), [3.26, 1.99, 3.26, 3.26])</td>\n",
+       "      <td>2.9425</td>\n",
        "      <td>11.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <th>Verdict</th>\n",
        "      <td>6</td>\n",
-       "      <td>((2, Verdict), [2.48, 2.48, 2.48, 2.48, 2.48, ...</td>\n",
+       "      <td>2.4800</td>\n",
        "      <td>14.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <th>Phantomlight</th>\n",
        "      <td>6</td>\n",
-       "      <td>((3, Phantomlight), [2.49, 2.49, 2.49, 2.49, 2...</td>\n",
+       "      <td>2.4900</td>\n",
        "      <td>14.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <th>Bloodlord's Fetish</th>\n",
        "      <td>5</td>\n",
-       "      <td>((4, Bloodlord's Fetish), [1.7, 1.7, 1.7, 1.7,...</td>\n",
+       "      <td>1.7000</td>\n",
        "      <td>8.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1380,157 +1455,39 @@
        "</div>"
       ],
       "text/plain": [
-       "                            Purchase Count  \\\n",
-       "Item ID Item Name                            \n",
-       "0       Splinter                         4   \n",
-       "1       Crucifer                         4   \n",
-       "2       Verdict                          6   \n",
-       "3       Phantomlight                     6   \n",
-       "4       Bloodlord's Fetish               5   \n",
-       "\n",
-       "                                                                   Item Price  \\\n",
-       "Item ID Item Name                                                               \n",
-       "0       Splinter                    ((0, Splinter), [1.28, 1.28, 1.28, 1.28])   \n",
-       "1       Crucifer                    ((1, Crucifer), [3.26, 1.99, 3.26, 3.26])   \n",
-       "2       Verdict             ((2, Verdict), [2.48, 2.48, 2.48, 2.48, 2.48, ...   \n",
-       "3       Phantomlight        ((3, Phantomlight), [2.49, 2.49, 2.49, 2.49, 2...   \n",
-       "4       Bloodlord's Fetish  ((4, Bloodlord's Fetish), [1.7, 1.7, 1.7, 1.7,...   \n",
-       "\n",
-       "                            Total Purchase Value  \n",
-       "Item ID Item Name                                 \n",
-       "0       Splinter                            5.12  \n",
-       "1       Crucifer                           11.77  \n",
-       "2       Verdict                            14.88  \n",
-       "3       Phantomlight                       14.94  \n",
-       "4       Bloodlord's Fetish                  8.50  "
+       "                            Purchase Count  Item Price  Total Purchase Value\n",
+       "Item ID Item Name                                                           \n",
+       "0       Splinter                         4      1.2800                  5.12\n",
+       "1       Crucifer                         4      2.9425                 11.77\n",
+       "2       Verdict                          6      2.4800                 14.88\n",
+       "3       Phantomlight                     6      2.4900                 14.94\n",
+       "4       Bloodlord's Fetish               5      1.7000                  8.50"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pop_items_df = df[[\"Item ID\", \"Item Name\", \"Price\"]].groupby(by = [\"Item ID\", \"Item Name\"])\n",
+    "\n",
     "pop_items_purchase_count = pop_items_df.count()[\"Price\"]\n",
-    "item_price = pop_items_df[\"Price\"]\n",
+    "pop_items_purchase_count_sorted = pop_items_purchase_count.sort_values(axis = 0, ascending = False)\n",
+    "\n",
+    "item_price = pop_items_df.mean()[\"Price\"]\n",
     "pop_items_total_purchase = pop_items_df.sum()[\"Price\"]\n",
     "\n",
-    "pop_items_summary_df = pd.DataFrame({\"Purchase Count\":pop_items_purchase_count, \"Item Price\": item_price, \n",
+    "pop_items_summary_df = pd.DataFrame({\"Purchase Count\":pop_items_purchase_count_sorted, \"Item Price\": item_price, \n",
     "                                    \"Total Purchase Value\": pop_items_total_purchase})\n",
     "pop_items_summary_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Item Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$59.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>12</td>\n",
-       "      <td>$4.23</td>\n",
-       "      <td>$50.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <th>Fiery Glass Crusader</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$4.58</td>\n",
-       "      <td>$41.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <th>Persuasion</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.22</td>\n",
-       "      <td>$28.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.53</td>\n",
-       "      <td>$31.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "92      Final Critic                                             13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "132     Persuasion                                                9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                 9   \n",
-       "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                      $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "132     Persuasion                                        $3.22   \n",
-       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
-       "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "132     Persuasion                                                 $28.99  \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
